--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pdfplumber==0.11.4
 
 # Embeddings and similarity search
 sentence-transformers==3.3.1
-faiss-cpu==1.9.0.post1
+faiss-cpu
 
 # Utilities
 python-dotenv==1.0.1
