final ui updates

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ wheels/
 pip-log.txt
 pip-delete-this-directory.txt
 
+# Node.js / Frontend
+frontend/node_modules/
+node_modules/
+package-lock.json
+
 # Virtual environments
 venv/
 env/
