--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ fastapi==0.115.5
 uvicorn[standard]==0.32.1
 python-multipart==0.0.18
 
-# PDF processing
-pypdf==5.1.0
-pdfplumber==0.11.4
+# Document processing
+pypdf==5.1.0                   # PDF extraction
+pdfplumber==0.11.4             # PDF extraction (complex layouts)
+python-docx==1.1.2             # DOCX extraction
+pandas==2.2.3                  # CSV extraction
 
 # Embeddings and similarity search
 sentence-transformers==3.3.1
