added ai integration

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ METADATA_STORAGE=json
 # Server configuration
 HOST=0.0.0.0
 PORT=8000
+
+# Multi-user mode (optional - browser-based user isolation)
+# Set to true for per-user data storage (each browser gets isolated data)
+ENABLE_MULTI_USER=false
