--- a/desktop/requirements_desktop.txt
+++ b/desktop/requirements_desktop.txt
@@ -13,3 +13,6 @@ pillow>=10.0.0
 
 # HTTP client for health checks
 requests>=2.31.0
+
+# SSL certificates for HuggingFace model downloads
+certifi>=2023.0.0
